# pywander-ai

./: README.md  pytest.ini  setup.cfg
.github/workflows/: generate-docs.yml
pywander_ai/: __init__.py  basic.py  generative_adversarial_network.py  multilayer_perceptron.py
requirements/: requirements.txt
tests/: conftest.py  test_datasets.py  test_fixture.py
