[metadata]
name = pywander-ai
version = attr: pywander_ai.__version__
description = 人工智能学习相关
url=https://github.com/a358003542/pywander-ai
long_description = file: README.md
long_description_content_type=text/markdown
author=wander
author_email=a358003542@outlook.com
maintainer=wander
maintainer_email=a358003542@outlook.com
license=MIT
keywords = python
classifiers =
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    pywander

[options.packages.find]
exclude =
    tests